--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.26.1",
+    "gatsby": "^2.13.57",
+    "gatsby-source-filesystem": "^2.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
