--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "gatsby": "^2.13.57",
+    "gatsby-plugin-mdx": "^1.8.0",
+    "gatsby-plugin-sharp": "^2.12.1",
+    "gatsby-remark-images": "^3.9.0",
     "gatsby-source-filesystem": "^2.9.0",
+    "gatsby-transformer-sharp": "^2.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
