--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^2.13.57",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^1.8.0",
     "gatsby-plugin-sharp": "^2.12.1",
     "gatsby-remark-images": "^3.9.0",
