--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.13.57",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^1.8.0",
     "gatsby-plugin-sharp": "^2.12.1",
+    "gatsby-plugin-styled-components": "^3.8.0",
     "gatsby-remark-images": "^3.9.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-sharp": "^2.10.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "2.2.1"
